SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Amount_Certified__c.field-meta.xml
<CustomField>
    <fullName>Amount_Certified__c</fullName>
    <inlineHelpText>In accordance with the Contract Documents, based on on-site observations and the data comprising this application, the Architect certifies t the Owner that to the best of the Architect&apos;s knowledge, information, and belief, the Work has progressed as indicated, the quality of the Work is in accordance with the Contract Documents, and the Contractor is entitled to payment of the AMOUNT CERTIFIED.</inlineHelpText>
    <label>Amount Certified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>