SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>