SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <formula>VALUE( Application__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>