SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architect</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SOV_Payment_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>