SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Balance_To_Finish_Including_Retainage__c.field-meta.xml
<CustomField>
    <fullName>Balance_To_Finish_Including_Retainage__c</fullName>
    <formula>Contract_Sum_To_Date__c - Total_Earned_Less_Retainage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract sum to date minus total earned less retainage.</inlineHelpText>
    <label>Balance To Finish Including Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>