SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Certified_By__c.field-meta.xml
<CustomField>
    <fullName>Certified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>