SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>Certified_Date__c</fullName>
    <label>Certified Date</label>
    <type>Date</type>
</CustomField>