SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Change_Order_Additions__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Additions__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>CO Additions Approved This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>