SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/CO_Additions_Approved_This_Month__c.field-meta.xml
<CustomField>
    <fullName>CO_Additions_Approved_This_Month__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>CO Additions Approved in Previous Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>