SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/CO_Deductions_Approved_in_Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>CO_Deductions_Approved_in_Previous_Month__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>CO Deductions Approved in Previous Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>