SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <inlineHelpText>Date the Contract was signed with the owner.</inlineHelpText>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>