SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Contract_For__c.field-meta.xml
<CustomField>
    <fullName>Contract_For__c</fullName>
    <label>Contract For</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>