SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Contract_Sum_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sum_To_Date__c</fullName>
    <formula>Original_Contract_Sum__c +  Net_Change_by_Change_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original contract sum plus net change by change orders.</inlineHelpText>
    <label>Contract Sum To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>