SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Current_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Due__c</fullName>
    <formula>Total_Earned_Less_Retainage__c -  Less__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment due for this period.</inlineHelpText>
    <label>Current Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>