SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/HST__c.field-meta.xml
<CustomField>
    <fullName>HST__c</fullName>
    <label>HST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>