SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Imported_Payment_IDs__c.field-meta.xml
<CustomField>
    <fullName>Imported_Payment_IDs__c</fullName>
    <label>Imported Payment IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>