SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Invoice_AR__c.field-meta.xml
<CustomField>
    <fullName>Invoice_AR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice (AR)</label>
    <referenceTo>Billings__c</referenceTo>
    <relationshipLabel>Payment Applications - G702</relationshipLabel>
    <relationshipName>Payment_Applications_G702</relationshipName>
    <type>Lookup</type>
</CustomField>