SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Is_Imported__c.field-meta.xml
<CustomField>
    <fullName>Is_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Imported</label>
    <type>Checkbox</type>
</CustomField>