SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Is_Pay_App_Created_For__c.field-meta.xml
<CustomField>
    <fullName>Is_Pay_App_Created_For__c</fullName>
    <defaultValue>&apos;NEWPAYAPP&apos;</defaultValue>
    <label>Is Pay App Created For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>