SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/isCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>isCommunityUser__c</fullName>
    <label>isCommunityUser</label>
    <length>128</length>
    <type>Text</type>
</CustomField>