SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/IsNextPayment__c.field-meta.xml
<CustomField>
    <fullName>IsNextPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNextPayment</label>
    <type>Checkbox</type>
</CustomField>