SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Less__c.field-meta.xml
<CustomField>
    <fullName>Less__c</fullName>
    <inlineHelpText>Total amount from previous payments.</inlineHelpText>
    <label>Less Previous Certs for Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>