SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Net_Change_by_Change_Orders__c.field-meta.xml
<CustomField>
    <fullName>Net_Change_by_Change_Orders__c</fullName>
    <formula>(Change_Order_Additions__c + CO_Additions_Approved_This_Month__c) + (Change_Order_Decuctions__c + CO_Deductions_Approved_in_Previous_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Change Orders approved for this job.</inlineHelpText>
    <label>Net Change by Change Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>