SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Old_PA_Ids__c.field-meta.xml
<CustomField>
    <fullName>Old_PA_Ids__c</fullName>
    <label>Old PA Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>