SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Old_PaymentApp_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_PaymentApp_Id__c</fullName>
    <label>Old PaymentApp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>