SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Original_Contract_Sum__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Sum__c</fullName>
    <label>Original Contract Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>