SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>