SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/PA_Type__c.field-meta.xml
<CustomField>
    <fullName>PA_Type__c</fullName>
    <label>PA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>