SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Payment_Application__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Application</label>
    <referenceTo>SOV_Payment_Application__c</referenceTo>
    <relationshipLabel>Payment Applications - G702</relationshipLabel>
    <relationshipName>Payment_Applications_G702</relationshipName>
    <type>Lookup</type>
</CustomField>