SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Payment_Application_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company that will be making the payments.</inlineHelpText>
    <label>PA To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>