SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Period_To__c.field-meta.xml
<CustomField>
    <fullName>Period_To__c</fullName>
    <inlineHelpText>This is usually the last date of the month you are billing for.</inlineHelpText>
    <label>Period To</label>
    <type>Date</type>
</CustomField>