SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>SOV_Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>