SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Retainage__c.field-meta.xml
<CustomField>
    <fullName>Retainage__c</fullName>
    <label>Retainage(%)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>