SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Retainage_of_Completed_Work__c.field-meta.xml
<CustomField>
    <fullName>Retainage_of_Completed_Work__c</fullName>
    <label>(DEP) Retainage of Completed Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>