SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Retainage_of_Completed_Work_F__c.field-meta.xml
<CustomField>
    <fullName>Retainage_of_Completed_Work_F__c</fullName>
    <formula>Retainage__c  * (Total_Completed__c + Total_Completed_From_Previous_App__c)</formula>
    <label>Retainage of Completed Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>