SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Retainage_of_Stored_Material_F__c.field-meta.xml
<CustomField>
    <fullName>Retainage_of_Stored_Material_F__c</fullName>
    <formula>Retainage__c *  Total_Material_Stored_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainage of Stored Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>