SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Vendor Submitted</fullName>
            </value>
            <value>
                <fullName>Company Accepted</fullName>
            </value>
            <value>
                <fullName>Company Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Company Paid</fullName>
                <isActive>false</isActive>
                <label>Company Paid</label>
            </value>
            <value>
                <fullName>Company Reviewed</fullName>
                <isActive>false</isActive>
                <label>Company Reviewed</label>
            </value>
            <value>
                <fullName>Company Submitted</fullName>
                <isActive>false</isActive>
                <label>Company Submitted</label>
            </value>
            <value>
                <fullName>Customer Paid</fullName>
                <isActive>false</isActive>
                <label>Customer Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>