SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>This is the date you are submitting the Payment Application.</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>