SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Balance_To_Finish__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_To_Finish__c</fullName>
    <description>This field is used to display aggregate Sum of balance to finish field from continuation sheet line.</description>
    <label>Total Balance To Finish</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>