SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed__c</fullName>
    <inlineHelpText>This is the Total Completed values from the Continuation Sheet for this Payment Application.</inlineHelpText>
    <label>Total Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>