SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Completed_and_Stored_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_and_Stored_To_Date__c</fullName>
    <inlineHelpText>This is the sum of Total Completed and Stored To Date column on the Continuation Sheet.</inlineHelpText>
    <label>Total Completed and Stored To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>