SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Completed_and_Stored_To_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_and_Stored_To_Date_F__c</fullName>
    <formula>Total_Completed__c +  Total_Material_Stored_To_Date__c +  Less__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEP)Total Completed and Stored To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>