SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Completed_From_Previous_App__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_From_Previous_App__c</fullName>
    <label>Total Completed From Previous App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>