SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Earned_Less_Retainage__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Less_Retainage__c</fullName>
    <formula>Total_Completed_and_Stored_To_Date__c  -  Total_Retainage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total completed and stored to date minus total retainage.</inlineHelpText>
    <label>Total Earned Less Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>