SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Material_Stored_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Stored_To_Date__c</fullName>
    <inlineHelpText>This is the Total Stored To Date values from the Continuation Sheet for this Payment Application.</inlineHelpText>
    <label>Total Material Stored To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>