SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Total_Retainage__c.field-meta.xml
<CustomField>
    <fullName>Total_Retainage__c</fullName>
    <formula>Total_Completed_and_Stored_To_Date__c * Retainage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retainage of completed work plus retainage of stored material.</inlineHelpText>
    <label>Total Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>