SubBt/force-app/main/default/objects/SOV_Payment_Application__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company that will be receiving the payments.</inlineHelpText>
    <label>PA From</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SOV_Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>