SubBt/force-app/main/default/objects/SOV_Payment_Application__c/recordTypes/PaymentApplication.recordType-meta.xml
<RecordType>
    <fullName>PaymentApplication</fullName>
    <active>true</active>
    <label>AR</label>
</RecordType>