SubBt/force-app/main/default/objects/SOV_Payment_Application__c/validationRules/Prevent_Update_When_PA_is_Customer_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_When_PA_is_Customer_Paid</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
OR(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Customer Paid&quot;),ISPICKVAL(PRIORVALUE(Status__c) , &quot;Customer Paid&quot;),
AND(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Customer Paid&quot;),(ISCHANGED( Status__c ))))
)</errorConditionFormula>
    <errorMessage>&apos;You cannot Edit this Payment Application because the Status has been set to Customer Paid. You will need to contact your Administrator to have the Status updated before you can Edit this record.</errorMessage>
</ValidationRule>