SubBt/force-app/main/default/objects/SOV_Payment_Application__c/validationRules/Prevent_Update_When_PA_is_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_When_PA_is_Submitted</fullName>
    <active>false</active>
    <description>You cannot edit the record, once the Payment Application is submitted or Company Approved</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
OR(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),ISPICKVAL(PRIORVALUE(Status__c) , &quot;Company Accepted&quot;))
)</errorConditionFormula>
    <errorMessage>You cannot edit the record, once the Payment Application is submitted or Company Accepted</errorMessage>
</ValidationRule>