SubBt/force-app/main/default/objects/SOV_Payment_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Application__c</columns>
    <columns>Amount_Certified__c</columns>
    <columns>PA_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Period_To__c</columns>
    <columns>Contract_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>